--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend/Components/_Imports.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend/Components/_Imports.razor
@@ -9,3 +9,5 @@
 @using TicketingSystemFrontend
 @using TicketingSystemFrontend.Client
 @using TicketingSystemFrontend.Components
+
+@using Microsoft.AspNetCore.Components.Authorization
