--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Layout/NavMenu.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Layout/NavMenu.razor
@@ -1,30 +1,16 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">TicketingSystemFrontend</a>
-    </div>
-</div>
-
-<input type="checkbox" title="Navigation menu" class="navbar-toggler" />
-
-<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
-    <nav class="nav flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-            </NavLink>
-        </div>
+﻿<div class="sidebar-nav">
+    <nav class="nav flex-column nav-pills">
+        <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+            <i class="bi bi-house-door"></i> Home
+        </NavLink>
+        <NavLink class="nav-link" href="/dashboard">
+            <i class="bi bi-speedometer2"></i> Dashboard
+        </NavLink>
+        <NavLink class="nav-link" href="/tickets">
+            <i class="bi bi-ticket-perforated"></i> Tickets
+        </NavLink>
+        <NavLink class="nav-link" href="/knowledge-base">
+            <i class="bi bi-book"></i> Knowledge Base
+        </NavLink>
     </nav>
 </div>
-
