--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/_Imports.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/_Imports.razor
@@ -7,3 +7,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using TicketingSystemFrontend.Client
+
+@using Microsoft.AspNetCore.Components.Authorization
