--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend/Components/App.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend/Components/App.razor
@@ -13,8 +13,10 @@
     <HeadOutlet @rendermode="InteractiveWebAssembly" />
 </head>
 
-<body>
-    <Routes @rendermode="InteractiveWebAssembly" />
+<body class="bg-dark text-light">
+    <CascadingAuthenticationState>
+        <Routes @rendermode="InteractiveWebAssembly" />
+    </CascadingAuthenticationState>
     <script src="_framework/blazor.web.js"></script>
 </body>
 
