/tickets page and /tickets/create frontend sample generated succefsully

--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Layout/NavMenu.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Layout/NavMenu.razor
@@ -1,16 +1,5 @@
-﻿<div class="sidebar-nav">
-    <nav class="nav flex-column nav-pills">
-        <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-            <i class="bi bi-house-door"></i> Home
-        </NavLink>
-        <NavLink class="nav-link" href="/dashboard">
-            <i class="bi bi-speedometer2"></i> Dashboard
-        </NavLink>
-        <NavLink class="nav-link" href="/tickets">
-            <i class="bi bi-ticket-perforated"></i> Tickets
-        </NavLink>
-        <NavLink class="nav-link" href="/knowledge-base">
-            <i class="bi bi-book"></i> Knowledge Base
-        </NavLink>
-    </nav>
-</div>
+﻿<ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+    <li><NavLink href="/" class="nav-link px-2 link-secondary">Tickets</NavLink></li>
+    <li><NavLink href="/dashboard" class="nav-link px-2 link-dark">Dashboard</NavLink></li>
+    <li><NavLink href="/articles" class="nav-link px-2 link-dark">Articles</NavLink></li>
+</ul>
