--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend/Components/App.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend/Components/App.razor
@@ -13,7 +13,7 @@
     <HeadOutlet @rendermode="InteractiveWebAssembly" />
 </head>
 
-<body class="bg-dark text-light">
+<body class="">
     <CascadingAuthenticationState>
         <Routes @rendermode="InteractiveWebAssembly" />
     </CascadingAuthenticationState>
