--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Layout/MainLayout.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Layout/MainLayout.razor
@@ -2,19 +2,47 @@
 @inherits LayoutComponentBase
 
 <CascadingAuthenticationState>
+    <div class="container">
+        <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+            <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
+                <img src="@Assets["images/logo.png"]" alt="My Logo" width="64" height="64" class="me-2" />
+            </a>
+            <NavMenu />
+            
+            <AuthorizeView>
+                <Authorized>
+                    Welcome, authorized user.
+                </Authorized>
+                <NotAuthorized>
+                    <div class="col-md-3 text-end">
+                        <button type="button" class="btn btn-outline-primary me-2">Login</button>
+                        <button type="button" class="btn btn-primary">Sign-up</button>
+                    </div>
+                </NotAuthorized>
+            </AuthorizeView>
+        </header>
 
-    <NavMenu />
+        @Body
 
-    @Body
-    HEY
-
-    <AuthorizeView>
-        <Authorized>
-            asd
-        </Authorized>
-        <NotAuthorized>
-            def
-        </NotAuthorized>
-    </AuthorizeView>
-
+    </div>
+    <footer class="pt-3 mt-4 bg-light text-center w-100">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+            <li class="nav-item">
+                <a href="#" class="nav-link px-2 text-body-secondary">
+                    Tickets
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link px-2 text-body-secondary">
+                    Dashboard
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link px-2 text-body-secondary">
+                    Articles
+                </a>
+            </li>
+        </ul>
+        <p class="text-center text-body-secondary">© 2025 Company, Inc</p>
+    </footer>
 </CascadingAuthenticationState>
