implemented the crud on frontent. I hope. Didn't tested yet with back.

--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Tickets/Home.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Tickets/Home.razor
@@ -1,5 +1,5 @@
 ﻿@page "/"
-@using TicketingSystemFrontend.Client.Services
+@using TicketingSystemFrontend.Client.DTOs
 @using TicketingSystemFrontend.Client.Services.Interfaces
 @inject ITicketService TicketService
 
