--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Tickets/TicketCreate.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Tickets/TicketCreate.razor
@@ -1,6 +1,7 @@
 ﻿@page "/tickets/create"
 @inject ITicketService TicketService
 @using System.ComponentModel.DataAnnotations
+@using TicketingSystemFrontend.Client.Requests
 @using TicketingSystemFrontend.Client.Services
 @using TicketingSystemFrontend.Client.Services.Interfaces
 
