--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Articles/ArticleDetails.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Articles/ArticleDetails.razor
@@ -16,7 +16,7 @@ else
     <div class="card">
         <div class="card-body">
             <h5 class="card-title">@article.Title</h5>
-            <h6 class="card-subtitle mb-2 text-muted">By @article.UserName</h6>
+            <h6 class="card-subtitle mb-2 text-muted">By @article.UserId</h6>
             <p class="card-text">@article.Description</p>
 
             <div class="mt-3">
