--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Articles/Articles.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Articles/Articles.razor
@@ -28,7 +28,7 @@ else
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title text-primary">@article.Title</h5>
                         <h6 class="card-subtitle mb-2 text-muted">
-                            Category: @article.ArticleCategoryName
+                            @* Category: @article.ArticleCategoryName *@
                         </h6>
 
                         <!-- Truncated description -->
@@ -37,9 +37,9 @@ else
                         </p>
 
                         <p class="text-muted small mt-3 mb-2">
-                            👤 @article.UserName <br />
+                            👤 @article.UserId <br />
                             📅 Created: @article.CreatedAt.ToShortDateString() <br />
-                            🛠️ Updated: @article.UpdatedAt.ToShortDateString()
+                            🛠️ @(article.UpdatedAt?.ToShortDateString() ?? "not edited yet")
                         </p>
 
                         <!-- View More button -->
