login-response now achieves front. Error 'username already taken' added. needs to be added futher only front-end management of tokens and another refresh token generation. also, user can now have multiple emails which causes conflicts...

--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Layout/MainLayout.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Layout/MainLayout.razor
@@ -15,7 +15,7 @@
                 </Authorized>
                 <NotAuthorized>
                     <div class="col-md-3 text-end">
-                        <button type="button" class="btn btn-outline-primary me-2">Login</button>
+                        <a href="/login" type=" button" class="btn btn-outline-primary me-2">Login</a>
                         <a href="/register" class="btn btn-primary">Sign-up</a>
                     </div>
                 </NotAuthorized>
