claims name and email understanded

--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Layout/MainLayout.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Layout/MainLayout.razor
@@ -12,6 +12,7 @@
             <AuthorizeView>
                 <Authorized>
                     Welcome, authorized user.
+                    <LogoutButton />
                 </Authorized>
                 <NotAuthorized>
                     <div class="col-md-3 text-end">
