--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend/Components/App.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend/Components/App.razor
@@ -18,6 +18,7 @@
         <Routes @rendermode="InteractiveWebAssembly" />
     </CascadingAuthenticationState>
     <script src="_framework/blazor.web.js"></script>
+    <script src="js/cookies.js"></script>
 </body>
 
 </html>
