--- a/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Profile.razor
+++ b/TicketingSystemFrontend/TicketingSystemFrontend/TicketingSystemFrontend.Client/Pages/Profile.razor
@@ -1,14 +1,15 @@
 ﻿@page "/profile"
-@page "/profile/change-password"
 @inject AuthenticationStateProvider AuthenticationStateProvider
 @inject NavigationManager NavigationManager
 
-<h3>My Profile</h3>
+<h1>
+    <b>My Profile</b>
+</h1>
 
 <NameEdit />
 <EmailEdit />
-<div>
-    <button class="btn btn-success mt-3" @onclick="NavigateToChangePassword">Change Password</button>
+<div class="mt-3">
+    <button class="btn btn-success" @onclick="NavigateToChangePassword">Change Password</button>
 </div>
 
 @code {
